--- a/adnan_assinment.html
+++ b/adnan_assinment.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assinment</title>
-    <link rel="stylesheet" href="/Assinment/adnan_assinment.css">
+    <link rel="stylesheet" href="./adnan_assinment.css">
     <link rel="stylesheet" href="/bootstrap-5.3.3-dist/css/bootstrap.min.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -85,7 +85,7 @@
                 <div class="pic col-lg-4 col-md-6 col-sm-12">
 
                     <img class="ph mt-2 rounded-3"
-                        src="/Assinment/photo/375597126_309382125105936_8735686727593614013_n.jpg" alt="">
+                        src="./photo/375597126_309382125105936_8735686727593614013_n.jpg" alt="">
 
                 </div>
 
@@ -105,10 +105,10 @@
                         <div id="carouselExampleInterval" class="carousel slide childe" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="/Assinment/photo/fci.jpg" class="d-block w-100" alt="...">
+                                    <img src="./photo/fci.jpg" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="/Assinment/photo/fci2.jpg" class="d-block w-100" alt="...">
+                                    <img src="./photo/fci2.jpg" class="d-block w-100" alt="...">
                                 </div>
 
 
@@ -147,14 +147,8 @@
 
                             </div>
                         </div>
-
                     </div>
-
-
-
                 </div>
-
-
 
             </div>
             </div>
@@ -168,10 +162,10 @@
                         <div id="carouselExampleInterval" class="carousel slide childe" data-bs-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active" data-bs-interval="10000">
-                                    <img src="/Assinment/photo/fci.jpg" class="d-block w-100" alt="...">
+                                    <img src="./photo/fci.jpg" class="d-block w-100" alt="...">
                                 </div>
                                 <div class="carousel-item" data-bs-interval="2000">
-                                    <img src="/Assinment/photo/fci2.jpg" class="d-block w-100" alt="...">
+                                    <img src="./photo/fci2.jpg" class="d-block w-100" alt="...">
                                 </div>
 
 
@@ -258,10 +252,6 @@
                                 class="btn btn-outline-danger  bg-white col-lg-3 col-sm-3 col-md-3">DATA</button>
 
                         </div>
-
-
-
-
                         <h3 class="mt-4">Comfortable:</h3>
 
                         <div class="row p-3  gap-1 ">
@@ -286,10 +276,6 @@
 
 
                         </div>
-
-
-
-
                         <h3 class="mt-4">Familiar:</h3>
 
                         <div class="row p-3  gap-1 ">
@@ -301,37 +287,16 @@
                                 class="btn btn-outline-success  bg-white col-lg-2 col-sm-2 col-md-2">DTNT</button>
                             <button type="button"
                                 class="btn btn-outline-danger  bg-white col-lg-2 col-sm-2 col-md-2">DATA</button>
-
-
-
-
                         </div>
 
                     </div>
-
-
-
-
                     <div class="w-50  text-center">
                         <h1 class="text-info"><b>My Education</b></h1>
                         <p class="text-warning">Diploma In Software Engineering <br>Feni Computer Institute(Feni,sadar)
                         </p>
 
                     </div>
-
-
-
                 </div>
-
-
-
-
-
-
-
-
-
-
             </div>
         </section>
 
@@ -365,10 +330,6 @@
                                 <h4 class="text-white"> <b>Send</b></h4>
                             </a>
                         </button>
-
-
-
-
                     </div>
                 </div>
 
@@ -378,10 +339,6 @@
 
 
     </main>
-
-
-
-
     <footer class="bg-black text-white align-items-center">
 
 
